// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package com.example;

option java_outer_classname = "EchoActionModel";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "com/example/valueentity/user_api.proto";

message Person {
    string name = 1;
}

message Hello {
  string message = 1;
}

service EchoAction {
  option (kalix.codegen) = {
    action: { }
  };

  rpc SayHello(Person) returns (Hello);

  // example importing a type coming from another file
  rpc Create(valueentity.CreateUser) returns (google.protobuf.Empty);
}
