// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package com.example.replicated.register.domain;

option java_outer_classname = "SomeRegisterDomain";

message SomeValue {
  string value = 1;
}
