// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example.state_in_different_proto;

option java_outer_classname = "UserApi";

message CreateUser {
  string user_id = 1 [(kalix.field).id = true];
  string name = 2;
}


message GetUser {
  string user_id = 1 [(kalix.field).id = true];
}

message CurrentUser {
  int32 value = 1;
}

service UserService {

  option (kalix.codegen) = {
    value_entity: {
      // entity is generated in package com.example.state_in_different_proto.domain
      name: ".domain.User"
      type_id: "user"
      // state is defined in package com.example.state_in_different_proto.state
      state: ".state.UserState"
    }
  };

  rpc Create (CreateUser) returns (google.protobuf.Empty);
  rpc GetCurrentUser (GetUser) returns (CurrentUser);
}
